--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,58 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+﻿@charset "utf-8";
+
+
+/*
+    Course COP2822c - Web Technologies
+    Florida State College at Jacksonville, FL
+
+    Author: Rafael A Melendez
+    Date:   June 2024
+
+    Stylesheet for index.html 
+*/
+/* header styles*/
+html {
+    height: 100%;
+    width: auto;
+    
 }
 
-html, body {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 11vh;
+    margin: 0;
 }
 
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+.content {
+    text-align: center;
+    padding: 20px;
 }
 
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+header {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
 }
+
+header img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+.aboreto-regular {
+    font-family: "Aboreto", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+section img {
+    max-width: 100%; /* Ensure the image doesn't exceed the width of its container */
+    height: auto; /* Maintain the aspect ratio */
+    display: block; /* Remove any default inline spacing */
+    margin: 0 auto; /* Center the image horizontally */
+}
+  
