--- a/src/psp_layout.css
+++ b/src/psp_layout.css
@@ -29,6 +29,13 @@ body {
     background-color: white;
 }
 
+body {
+    background-image: url('tech2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 footer {
     text-align: center;
     padding: 100px 0;
